<resources>
    <string name="app_name">Delivery Lavalle</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_orders">Pedidos</string>
    <string name="title_profile">Perfil</string>
    <string name="delivery">Delivery \ </string>
    <string name="lavalle">Lavalle</string>
    <string name="welcome_message">Bienvenido!</string>
    <string name="welcome_message_subtitle">Inicia Sesión con Google para comenzar</string>

    <!-- Hints -->
    <string name="cellphone_label">Teléfono o Celular</string>
    <string name="phone_fragment_message">Necesitamos un teléfono de contacto para que cualquier vendedor pueda llamarte</string>
    <string name="date_fragment_message">Estos son los datos de tu perfil:</string>
    <string name="address_fragment_message">¿Dónde querés recibir tus ordenes?</string>


    <!-- Shared preferences here! -->
    <string name="userSession">userSession</string>
    <string name="email">email</string>
    <string name="given_name">given_name</string>
    <string name="family_name">family_name</string>
    <string name="client_id">client_id</string>
    <string name="picture">picture</string>
    <string name="phone">phone</string>
    <string name="username">username</string>
    <string name="is_login_ready">is_login_ready</string>


    <string name="street">Calle*</string>
    <string name="floor">Piso o Departamento</string>
    <string name="district">Distrito(ej: Villa Tulumaya, Costa de Araujo)</string>
    <string name="reference">Referencia</string>
    <string name="required">Este campo es requerido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="company_near_feed">Emprendedores cerca tuyo</string>
    <string name="company_near_category">Emprendedores de %s</string>
    <string name="company_id">idCompany</string>
    <string name="products_of">Productos de %s</string>
    <string name="not_found_title_company">Ops! No encontramos delivery en tu zona</string>
    <string name="not_found_subtitle_company">No hay nadie que ofrezca sus productos en donde estás, si conoces a alguien, invítalo!</string>
    <string name="product_of">Productos de %s</string>
    <string name="method_and_payment_detail">Métodos de Pago que acepta este emprendedor</string>
    <string name="price">Precio</string>
    <string name="quantity">Cantidad</string>
    <string name="category_of">Categorias de %s</string>
    <string name="arguments_orders">orders</string>
    <string name="arguments_orders_grouped">ordersGrouped</string>
    <string name="arguments_company">company</string>
    <string name="arguments_address">address</string>
    <string name="arguments_method">method</string>
    <string name="order_detail_quantity">X %s</string>
    <string name="order_detail_price">$%s</string>
    <string name="total">Total:</string>
    <string name="continue_order">Continuar Pedido</string>
    <string name="confirm_order">Confirmar Pedido</string>
    <string name="description_order_empty">Ops! Al parecer tu pedido está vacio</string>
    <string name="description_order_empty_subtitle">¡Vuelve y ordena algo!</string>
    <string name="arguments_total">Total</string>
    <string name="address_delivery">Direccion de Entrega</string>
    <string name="payment_method">Método de Pago</string>
    <string name="item_street_and_number">Calle: %s %s</string>
    <string name="item_district">Distrito: %s</string>
    <string name="item_reference">Referencia: %s</string>
    <string name="argument_must_return">argument_must_return</string>
    <string name="delete">Eliminar</string>
    <string name="phishing_text_1">Recibiras un Link de pago del vendedor luego, para evitar estafas te recomendamos pagar en cuanto tengas el producto en tus manos</string>
    <string name="token">token</string>
    <string name="confirm_title">Confirma tu pedido</string>
    <string name="confirm_subtitle">Revisalo bien!</string>
    <string name="products">Productos</string>
    <string name="mercado_pago">Mercado Pago</string>
    <string name="phishing_text_2">Te Avisaremos cuando el link de Mercado Pago esté disponible para pagar, te recomendamos no pagar hasta que tengas el producto en tus manos</string>
    <string name="arguement_order_response">argument_order_response</string>
    <string name="local_delivery_text">Retira tu producto en la siguiente direccion</string>
    <string name="retry_delivery_local">Prefiero retirarlo yo mismo en el local</string>
    <string name="argument_retry_in_local">retryInLocal</string>
    <string name="order_listing_id">Orden #%s</string>
    <string name="state_order_listing">Estado de tu Pedido: %s</string>
    <string name="date_create_order_listing">Fecha del Pedido: %s</string>
    <string name="order_detail">Detalles de tu pedido</string>
    <string name="meli_link_available">Ya esta disponible el Link de pago, para evitar estafas te recomendamos que abras el link y pagues una vez que el vendedor este en tu domicilio o tengas el producto en tus manos</string>
    <string name="meli_link_not_available">El vendedor aun no ha enviado el link de pago, te avisaremos cuando esté disponible</string>
    <string name="meli_link_not_found">Al parecer no es un link valido, comunicate con el vendedor para informarle.</string>
    <string name="order_number">Orden #</string>
    <string name="order_listing_app_bar_1">\Pedidos \</string>
    <string name="order_listing_app_bar_2">Actuales</string>
    <string name="from_settings">fromSettings</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="terms_and_conditions">Continuando, Acepto los <a href="https://www.deliverylavalle.com.ar/terminosycondiciones">Terminos y condiciones</a></string>
    <string name="no_conection">No hay conexion a internet, Vuelve a intentarlo luego</string>
    <string name="rating_order">Califica tu pedido</string>
    <string name="left_a_comment">Deja tu comentario</string>
    <string name="send_review">Enviar Comentario</string>
    <string name="must_left_at_least_a_star">Debes dejar al menos una estrella</string>
    <string name="see_all_reviews">Ver todas las reseñas</string>
    <string name="there_is_no_reviews">No hay reseñas de aqui</string>
    <string name="order_something_to_add_a_review">Pide algo para añadir una reseña aqui</string>
    <string name="token_client_id">53044701658-a7r3evgf1basgjbpu0cp9ifl9uugeu7j.apps.googleusercontent.com</string>
    <string name="in_onboarding">InOnboarding</string>
    <string name="skip">Omitir</string>


</resources>