<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.orderSelectPayment.OrderSelectPaymentAndAddress">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/app_bar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/address_delivery"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payment_and_delivery_rv"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/retry_in_local_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:text="@string/retry_delivery_local"
        />
    <include
        android:id="@+id/banner_local"
        android:visibility="gone"
        layout="@layout/banner_local_delivery"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/payment_method"/>
    <include layout="@layout/banner_phishing"
        android:id="@+id/phishing_banner_1"
        android:visibility="gone"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </RadioGroup>

</LinearLayout>
    <Button
        android:id="@+id/order_detail_continue_button"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/continue_order"
        android:textColor="@color/colorPrimary"
        android:background="@color/green"/>
</FrameLayout>