<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.axelfernandez.deliverylavalle.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.axelfernandez.deliverylavalle.ui.orderListing.OrderListingFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_orderStatusDetail"
            app:destination="@id/orderStatusDetail"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.axelfernandez.deliverylavalle.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_notifications_to_cellPhoneFragment2"
            app:destination="@id/cellPhoneFragment2"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_notifications_to_addressList2"
            app:destination="@id/addressList2"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/orderStatusDetail"
        android:name="com.axelfernandez.deliverylavalle.ui.orderStatusDetail.OrderStatusDetail"
        android:label="order_status_detail_fragment"
        tools:layout="@layout/order_status_detail_fragment" />
    <fragment
        android:id="@+id/cellPhoneFragment2"
        android:name="com.axelfernandez.deliverylavalle.ui.cellphone.CellPhoneFragment"
        android:label="cell_phone_fragment"
        tools:layout="@layout/cell_phone_fragment" />
    <fragment
        android:id="@+id/addressList2"
        android:name="com.axelfernandez.deliverylavalle.ui.addressList.AddressList"
        android:label="address_list_fragment"
        tools:layout="@layout/address_list_fragment" >
        <action
            android:id="@+id/action_addressList_to_addressFragment2"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:destination="@id/addressFragment3"
            app:popUpTo="@id/addressList2" />
    </fragment>
    <fragment
        android:id="@+id/addressFragment3"
        android:name="com.axelfernandez.deliverylavalle.ui.address.AddressFragment"
        android:label="address_fragment"
        tools:layout="@layout/address_fragment" >
        <action
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            android:id="@+id/action_addressFragment2_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.axelfernandez.deliverylavalle.ui.map.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_addressFragment3"
            app:destination="@id/addressList2"
            app:popUpTo="@id/addressFragment3"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>