<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.cellphone.CellPhoneFragment"
    android:background="#FFF"
    app:navGraph="@navigation/navigation_login">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:text="@string/phone_fragment_message"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tilo_cellphone"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <EditText
            android:hint="@string/cellphone_label"
            android:id="@+id/cellphone_field"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:text="@string/date_fragment_message"/>
    <TextView
        android:id="@+id/phone_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/phone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/phone_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:text="Foto:"
            />
        <ProgressBar
            android:id="@+id/photo_progress_bar"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"/>
        <ImageView
            android:id="@+id/phone_image"
            android:layout_marginLeft="80dp"
            android:layout_width="120dp"
            android:layout_height="150dp"
            />
    </FrameLayout>

</LinearLayout>

 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="350dp"
        android:src="@drawable/screen3"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="21dp"/>
    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Siguiente"
        android:textColor="@color/colorPrimary"
        android:background="@color/green"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"/>


</FrameLayout>
</FrameLayout>